divide partials inparts folder

--- a/projectIt/src/pages/index.html
+++ b/projectIt/src/pages/index.html
@@ -1,5 +1,9 @@
 {% extends "layout-2.html" %}
 
+      {% block content %}
+      
+      {% endblock %}
+
 {% set title = "Clean IT Theme" %}
 {% set img1 = "images/slide1.jpg" %}
 
