--- a/project-consult/Theme-consluting/index.html
+++ b/project-consult/Theme-consluting/index.html
@@ -725,7 +725,7 @@
     </div>
   </div>
 </div>
-<!--<script src="js/core.min.js"></script> 
-<script src="js/script.js"></script> -->
+<script src="js/core.min.js"></script> 
+<script src="js/script.js"></script>
 </body>
 </html>
